corrected azarias.tex

--- a/docs/report/project_plan.tex
+++ b/docs/report/project_plan.tex
@@ -8,8 +8,7 @@
 \chapter{Objectives}
 The aim of this project is to create a software capable to teach to everyone how to type faster.
 The purpose of this guide will be for education and enjoyment.\\
-The software will have options to choose the level of the tests. Thanks to this level system, people who don't know how to type will
-be able to learn, and people who already knows the basics will be capable of improving their current speed.\\
+The software will have options to choose the level of the tests. Thanks to this level system, people who do not know how to type will be able to learn, and people who already knows basics will be capable of improving their current speed.\\
 The users learning from scratch will be guided from the baseline of the keyboard until the numbers at the second upper-line of the keyboard.\\
 The software will be an open-source (under LGPL licence) Qt project. It will be available for the three most-used platform : 
 \begin{itemize}
@@ -59,4 +58,4 @@ All tasks will be completed by 1/05/2016.
 \chapter{Defining features and benefits of the software}
 The benefits of this product are that it will teach the user how to type faster. The typing speed is really important today, where every company has computers and so keyboards. Not only secretary should type faster, everyone who type faster is more efficient at his work and can satisfy his responsible and/or client. The software will be free, so accessible to everyone who wants to use it. \\
 Not only english, but a lots of others languages will be available in the software. So if you want to improve your typing speed in your native language you can. Moreover you can improve your speed in others languages.
-Another advantage of this software licence. Everyone who wants to do improving on the it can fork the code and improve it as he wants to.
+Another advantage of this software licence. Furthermore, people who wants to improve the software are free to do it as it is an open source project. 
