--- a/docs/report/keywords.tex
+++ b/docs/report/keywords.tex
@@ -1,5 +1,5 @@
 \lstset{
- morekeywords={TExercice,TLayouts,TPractical,TProgression,TResult,TStats,TUser,TUserManager,
+ morekeywords={TExercise,TLayouts,TPractical,TProgression,TResult,TStats,TUser,TUserManager,
  THomePage,TOptionDialog,TWindowTest,TImprove,TLabel,TPage,
  TPracticeBase,TPracticeRace,TPracticeText,TStackPages,TToolbar,TWindowLearn,GamePage,HomePage,LearnPage,TFingerPosition,
  TPresentation,TVirtualKeyboard,TVirtualKey,PracticePage,
